page structure, add custom.css for custom bootstrap elements, add main.js, font-awesome

--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <title>Front-end-Assignment</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-   <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
-   <script src="assets/js/popper.min.js"></script>
-   <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/custom.css">
+
+  <title>Front-end-Assignment</title>
+</head>
+
+<body>
+
+  <!-- Nav -->
+  <section class="navbar">
+    Navbar
+  </section>
+  <!-- End Nav -->
+
+  <!-- Slider -->
+  <section class="slider">
+    Slider
+  </section>
+  <!-- End Slider -->
+
+  <!-- Service -->
+  <section class="services">
+    Service
+  </section>
+  <!-- End Service -->
+
+  <section class="projects">
+    Projects
+  </section>
+
+  <!-- Clients -->
+  <section class="clients">CLIENTS</section>
+  <!-- End Clients -->
+
+  <!-- Members -->
+  <section class="members">MEMBERS</section>
+  <!-- End Members -->
+
+  <!-- Contact -->
+  <section class="contact">CONTACT</section>
+  <!-- End Contact -->
+
+
+
+  <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
