finished Services content, fixed menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/css//owl.theme.default.min.css">
   <link rel="stylesheet" href="assets/css/custom.css">
 
   <title>Front-end-Assignment</title>
@@ -16,25 +18,335 @@
 <body>
 
   <!-- Nav -->
-  <section class="navbar">
-    Navbar
-  </section>
+  <nav id="" class="c-navbar navbar fixed-top navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold c-active" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Project</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Clients</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Meet the team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Contact us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <!-- End Nav -->
 
   <!-- Slider -->
   <section class="slider">
-    Slider
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="slider-item">
+            <h1>SLIDER</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="slider-item">
+            <h1>SLIDER</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="slider-item">
+            <h1>SLIDER</h1>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </section>
   <!-- End Slider -->
 
   <!-- Service -->
-  <section class="services">
-    Service
+  <section class="services pt-10 ">
+    <div class="container">
+      <div class="row">
+        <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
+          <h3 class="text-white font-weight-bold">Services</h3>
+          <small class="text-white ">
+            LOREM ISUM DOLOR SIT AMET, CONSECTETUR ADISCING ELIT
+          </small>
+        </div>
+        <div class="feature-box mt-4 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="feature-icon">
+            <i class="fa fa-2x fa-empire text-white" aria-hidden="true"></i>
+          </div>
+          <div class="ml-4 feature-detail">
+            <h6 class="feature-title text-uppercase text-white font-weight-bold">Customer Support</h6>
+            <p>
+              <small class="feature-content text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.
+              </small>
+            </p>
+          </div>
+        </div>
+        <div class="feature-box mt-4 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="feature-icon">
+            <i class="fa fa-2x fa-sliders text-white" aria-hidden="true"></i>
+          </div>
+          <div class="ml-4 feature-detail">
+            <h6 class="feature-title text-uppercase text-white font-weight-bold">sliders</h6>
+            <p>
+              <small class="feature-content text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</small>
+            </p>
+          </div>
+        </div>
+        <div class="feature-box mt-4 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="feature-icon">
+            <i class="fa fa-2x fa-align-justify text-white" aria-hidden="true"></i>
+          </div>
+          <div class="ml-4 feature-detail">
+            <h6 class="feature-title text-uppercase text-white font-weight-bold">buttons</h6>
+            <p>
+              <small class="feature-content text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</small>
+            </p>
+          </div>
+        </div>
+        <div class="feature-box mt-4 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="feature-icon">
+            <i class="fa fa-2x fa-file-o text-white" aria-hidden="true"></i>
+          </div>
+          <div class="ml-4 feature-detail">
+            <h6 class="feature-title text-uppercase text-white font-weight-bold">HTML5 / CSS3 / JS</h6>
+            <p>
+              <small class="feature-content text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</small>
+            </p>
+          </div>
+        </div>
+        <div class="feature-box mt-4 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="feature-icon">
+            <i class="fa fa-2x fa-user-o text-white" aria-hidden="true"></i>
+          </div>
+          <div class="ml-4 feature-detail">
+            <h6 class="feature-title text-uppercase text-white font-weight-bold">Icons</h6>
+            <p>
+              <small class="feature-content text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</small>
+            </p>
+          </div>
+        </div>
+        <div class="feature-box mt-4 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="feature-icon">
+            <i class="fa fa-2x fa-tv text-white" aria-hidden="true"></i>
+          </div>
+          <div class="ml-4 feature-detail">
+            <h6 class="feature-title text-uppercase text-white font-weight-bold">Lightbox</h6>
+            <p>
+              <small class="feature-content text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</small>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- End Service -->
 
-  <section class="projects">
-    Projects
+  <section class="projects  pt-10">
+    <div class="container">
+      <div class="row">
+        <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
+          <h3 class="font-weight-bold mb-2">Projects</h3>
+          <small class="text-grey">
+            LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT
+          </small>
+          <p class="text-grey mt-4 mb-4 ml-5 mr-5 pl-5 pr-5">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat,
+            ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo. vamus suscipit molestie vestibulum.
+          </p>
+        </div>
+        <div class="owl-carousel owl-theme">
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Presentation
+              <div class="project-category text-uppercase">Category</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Porto Watch
+              <div class="project-category text-uppercase">media</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Identity
+              <div class="project-category text-uppercase">logo</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Porto Screens
+              <div class="project-category text-uppercase">website</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <!-- <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Three Bottles
+              <div class="project-category text-uppercase">logo</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Company T-Shirt
+              <div class="project-category text-uppercase">brand</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Mobile Mockup
+              <div class="project-category text-uppercase">Website</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Porto Label
+              <div class="project-category text-uppercase">media</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Business Folders
+              <div class="project-category text-uppercase">logo</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Tablet Screen
+              <div class="project-category text-uppercase">Website</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Black Watch
+              <div class="project-category text-uppercase">media</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <div class="project-wrapper">
+            <span>
+              <img src="https://picsum.photos/id/100/251/251" alt="">
+            </span>
+            <div class="project-name">
+              Monitor Mockup
+              <div class="project-category text-uppercase">website</div>
+            </div>
+            <div class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </div>
+          </div> -->
+
+
+
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Clients -->
@@ -53,6 +365,7 @@
 
   <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
