fixed syntax from peter's request

--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/css//owl.theme.default.min.css">
   <link rel="stylesheet" href="assets/css/custom.css">
-
   <title>Front-end-Assignment</title>
 </head>
-
 <body>
-
   <!-- Nav -->
   <nav id="" class="c-navbar navbar fixed-top navbar-expand-lg">
     <div class="container">
@@ -172,7 +166,8 @@
   </section>
   <!-- End Service -->
 
-  <section class="projects  pt-10">
+  <!-- Projects -->
+  <section class="projects pt-10">
     <div class="container">
       <div class="row">
         <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
@@ -186,168 +181,21 @@
           </p>
         </div>
         <div class="owl-carousel owl-theme">
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Presentation
-              <div class="project-category text-uppercase">Category</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Porto Watch
-              <div class="project-category text-uppercase">media</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Identity
-              <div class="project-category text-uppercase">logo</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Porto Screens
-              <div class="project-category text-uppercase">website</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <!-- <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Three Bottles
-              <div class="project-category text-uppercase">logo</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Company T-Shirt
-              <div class="project-category text-uppercase">brand</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Mobile Mockup
-              <div class="project-category text-uppercase">Website</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Porto Label
-              <div class="project-category text-uppercase">media</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Business Folders
-              <div class="project-category text-uppercase">logo</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Tablet Screen
-              <div class="project-category text-uppercase">Website</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Black Watch
-              <div class="project-category text-uppercase">media</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div>
-
-          <div class="project-wrapper">
-            <span>
-              <img src="https://picsum.photos/id/100/251/251" alt="">
-            </span>
-            <div class="project-name">
-              Monitor Mockup
-              <div class="project-category text-uppercase">website</div>
-            </div>
-            <div class="project-action">
-              <i class="fa fa-plus text-white" aria-hidden="true"></i>
-            </div>
-          </div> -->
-
-
-
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
+          <h1>Item</h1>
         </div>
       </div>
     </div>
+    </div>
   </section>
+  <!-- End Projects -->
 
   <!-- Clients -->
   <section class="clients">CLIENTS</section>
@@ -361,13 +209,10 @@
   <section class="contact">CONTACT</section>
   <!-- End Contact -->
 
-
-
   <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/owl.carousel.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
-
 </html>
