services, projects, team members, add some comments for css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="assets/css/custom.css">
   <title>Front-end-Assignment</title>
 </head>
+
 <body>
   <!-- Nav -->
   <nav id="" class="c-navbar navbar fixed-top navbar-expand-lg">
@@ -79,11 +81,11 @@
   <!-- End Slider -->
 
   <!-- Service -->
-  <section class="services pt-10 ">
+  <section class="services pt-11 pb-11 ">
     <div class="container">
       <div class="row">
         <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
-          <h3 class="text-white font-weight-bold">Services</h3>
+          <h2 class="text-white font-weight-bold">Services</h2>
           <small class="text-white ">
             LOREM ISUM DOLOR SIT AMET, CONSECTETUR ADISCING ELIT
           </small>
@@ -167,11 +169,11 @@
   <!-- End Service -->
 
   <!-- Projects -->
-  <section class="projects pt-10">
+  <section class="projects pt-11 pb-11">
     <div class="container">
       <div class="row">
         <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
-          <h3 class="font-weight-bold mb-2">Projects</h3>
+          <h2 class="font-weight-bold mb-2">Projects</h2>
           <small class="text-grey">
             LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT
           </small>
@@ -180,16 +182,105 @@
             ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo. vamus suscipit molestie vestibulum.
           </p>
         </div>
-        <div class="owl-carousel owl-theme">
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
-          <h1>Item</h1>
+        <div class="owl-carousel-projects owl-carousel owl-theme">
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div class="project-wrapper">
+            <span class="project-thumb">
+              <img src="https://picsum.photos/id/912/600/600" alt="" srcset="">
+            </span>
+            <span class="project-title">
+              Postro Watch
+              <span class="project-category">
+                Category
+              </span>
+            </span>
+            <span class="project-action">
+              <i class="fa fa-plus text-white" aria-hidden="true"></i>
+            </span>
+          </div>
         </div>
       </div>
     </div>
@@ -198,15 +289,202 @@
   <!-- End Projects -->
 
   <!-- Clients -->
-  <section class="clients">CLIENTS</section>
+  <section class="clients">
+    <section>
+      <div class="container pt-11 pb-11">
+        <h2 class="text-white font-weight-bold text-center">We’re excited about Porto Template</h2>
+        <p class="text-white opacity-8 text-uppercase text-center">30,000 CUSTOMERS IN 100 COUNTRIES USE PORTO TEMPLATE.
+          MEET OUR CUSTOMERS.</p>
+        <div class="mt-5 mb-4 owl-carousel-clients owl-carousel owl-theme">
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-1.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-2.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-3.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-4.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-5.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-6.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-7.png" alt="">
+          </span>
+
+
+        </div>
+
+
+        <div class="owl-carousel-quotes owl-carousel owl-theme">
+          <div class="clients-quote p-4">
+            <blockquote class="m-0 pt-3 pl-5 pr-5 pb-3">
+              <p class="text-5 text-white line-height-5 mb-0 text-center">Lorem ipsum dolor sit amet, consectetur
+                adipiscing
+                elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti.</p>
+            </blockquote>
+            <div class="author text-center">
+              <p>
+                <strong class="text-white"> -John Smlth. Okler</strong>
+              </p>
+            </div>
+          </div>
+          <div class="clients-quote p-4">
+            <blockquote class="m-0 pt-3 pl-5 pr-5 pb-3">
+              <p class="text-5 text-white line-height-5 mb-0 text-center">Lorem ipsum dolor sit amet, consectetur
+                adipiscing
+                elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti.</p>
+            </blockquote>
+            <div class="author text-center">
+              <p>
+                <strong class="text-white"> -John Smlth. Okler</strong>
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </section>
+  </section>
   <!-- End Clients -->
 
   <!-- Members -->
-  <section class="members">MEMBERS</section>
+  <section class="members pt-10 pb-10">
+    <div class="container">
+      <div class="row">
+        <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
+          <h2 class="font-weight-bold mb-2">Team</h2>
+          <small class="text-grey">
+            LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT
+          </small>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 pl-3 pr-3 mb-3">
+          <div class="card c-card-border-less">
+            <img class="card-img-top" src="https://portotheme.com/html/porto/7.5.0/img/team/team-1.jpg"
+              alt="Card image cap">
+            <div class="card-body p-0">
+              <div class="mt-2 text-4 letter-space--2 font-weight-bold">JOHN DOE</div>
+              <div class="text-grey text-2">CEO</div>
+              <p class="card-text text-2 mt-3 text-grey">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan
+              </p>
+              <div class="icons">
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-facebook text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-twitter text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-linkedin text-white" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 pl-3 pr-3 mb-3">
+          <div class="card c-card-border-less">
+            <img class="card-img-top" src="https://portotheme.com/html/porto/7.5.0/img/team/team-2.jpg"
+              alt="Card image cap">
+            <div class="card-body p-0">
+              <div class="mt-2 text-4 letter-space--2 font-weight-bold">JOHN DOE</div>
+              <div class="text-grey text-2">CEO</div>
+              <p class="card-text text-2 mt-3 text-grey">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan
+              </p>
+              <div class="icons">
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-facebook text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-twitter text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-linkedin text-white" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 pl-3 pr-3 mb-3">
+          <div class="card c-card-border-less">
+            <img class="card-img-top" src="https://portotheme.com/html/porto/7.5.0/img/team/team-3.jpg"
+              alt="Card image cap">
+            <div class="card-body p-0">
+              <div class="mt-2 text-4 letter-space--2 font-weight-bold">JOHN DOE</div>
+              <div class="text-grey text-2">CEO</div>
+              <p class="card-text text-2 mt-3 text-grey">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan
+              </p>
+              <div class="icons">
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-facebook text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-twitter text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-linkedin text-white" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3 pl-3 pr-3 mb-3">
+          <div class="card c-card-border-less">
+            <img class="card-img-top" src="https://portotheme.com/html/porto/7.5.0/img/team/team-4.jpg"
+              alt="Card image cap">
+            <div class="card-body p-0">
+              <div class="mt-2 text-4 letter-space--2 font-weight-bold">JOHN DOE</div>
+              <div class="text-grey text-2">CEO</div>
+              <p class="card-text text-2 mt-3 text-grey">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ligula mi, non suscipitaccumsan
+              </p>
+              <div class="icons">
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-facebook text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-twitter text-white" aria-hidden="true"></i>
+                </div>
+                <div class="circle-btn mr-1">
+                  <i class="fa fa fa-linkedin text-white" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
   <!-- End Members -->
 
   <!-- Contact -->
-  <section class="contact">CONTACT</section>
+  <section class="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+
+        </div>
+        <div class="light-bg col-sm-12 col-md-12 col-lg-6 col-xl-6 p-9">
+          <h2 class="font-weight-bold pt-2">Contact us</h2>
+          <p class="mb-4 text-3 text-grey">LOREM IPSUM DOLOR SIT A MET</p>
+
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- End Contact -->
 
   <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
@@ -215,4 +493,5 @@
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
