--- a/index.html
+++ b/index.html
@@ -14,33 +14,37 @@
 
 <body>
   <!-- Nav -->
-  <nav id="" class="c-navbar navbar fixed-top navbar-expand-lg">
+  <nav id="home" class="c-navbar navbar fixed-top navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <a class="navbar-brand text-white font-weight-bold" href="#">LOGO</a>
+      <button class="navbar-toggler c-navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon text-white">
+          <i class="fa fa-align-justify pt-2"></i>
+        </span>
       </button>
 
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link text-uppercase c-link text-white font-weight-bold c-active" href="#">Home</a>
+        <ul class="navbar-nav ml-auto mobile-navbar">
+          <li class="nav-item text-sm-center ">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold c-active" href="#home">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">services</a>
+          <li class="nav-item text-sm-center ">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#services">services</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Project</a>
+          <li class="nav-item text-sm-center ">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#projects">Project</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Clients</a>
+          <li class="nav-item text-sm-center ">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#clients">Clients</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Meet the team</a>
+          <li class="nav-item text-sm-center ">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#members">Meet the team</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#">Contact us</a>
+          <li class="nav-item text-sm-center ">
+            <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#contact">Contact us</a>
           </li>
         </ul>
       </div>
@@ -54,34 +58,83 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="slider-item">
-            <h1>SLIDER</h1>
+            <div class="slider-content text-center">
+              <span><img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-title-border.png" alt=""
+                  style="width: 22.6219px; height: 6.11404px;"></span>
+              <span class="text-white opacity-8 text-3 text-uppercase">we work hard and porto has</span>
+              <span><img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-title-border.png" alt=""
+                  style="width: 22.6219px; height: 6.11404px;"></span>
+              <h1 class="font-weight-bold text-white">PERFECT VIDEOS</h1>
+              <p class="text-grey text-1">Trusted by over
+                <span class="font-weight-bold text-white">30,000</span>
+                satisfied users, Porto is a huge success
+                <br>
+                in the one of largest world's MarketPlace
+              </p>
+              <button class="btn text-2 font-weight-bold btn-primary c-btn text-uppercase">get start now !</button>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="slider-item">
-            <h1>SLIDER</h1>
+            <div class="slider-content text-center">
+              <span><img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-title-border.png" alt=""
+                  style="width: 22.6219px; height: 6.11404px;"></span>
+              <span class="text-white opacity-8 text-3 text-uppercase">we work hard and porto has</span>
+              <span><img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-title-border.png" alt=""
+                  style="width: 22.6219px; height: 6.11404px;"></span>
+              <h1 class="font-weight-bold text-white">PERFECT VIDEOS</h1>
+              <p class="text-grey text-1">Trusted by over
+                <span class="font-weight-bold text-white">30,000</span>
+                satisfied users, Porto is a huge success
+                <br>
+                in the one of largest world's MarketPlace
+              </p>
+              <button class="btn text-2 font-weight-bold btn-primary c-btn text-uppercase">get start now !</button>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="slider-item">
-            <h1>SLIDER</h1>
+            <div class="bg-thumb">
+              <img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-bg-6.jpg" alt="" srcset="">
+            </div>
+            <div class="slider-content text-center">
+              <span><img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-title-border.png" alt=""
+                  style="width: 22.6219px; height: 6.11404px;"></span>
+              <span class="text-white opacity-8 text-3 text-uppercase">we work hard and porto has</span>
+              <span><img src="https://portotheme.com/html/porto/7.5.0/img/slides/slide-title-border.png" alt=""
+                  style="width: 22.6219px; height: 6.11404px;"></span>
+              <h1 class="font-weight-bold text-white">PERFECT VIDEOS</h1>
+              <p class="text-white text-1">Trusted by over
+                <span class="font-weight-bold text-white">30,000</span>
+                satisfied users, Porto is a huge success
+                <br>
+                in the one of largest world's MarketPlace
+              </p>
+              <button class="btn text-2 font-weight-bold btn-primary c-btn text-uppercase">get start now !</button>
+            </div>
           </div>
         </div>
+
+
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+    </div>
+
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
     </div>
   </section>
   <!-- End Slider -->
 
   <!-- Service -->
-  <section class="services pt-11 pb-11 ">
+  <section id="services" class="services pt-11 pb-11 ">
     <div class="container">
       <div class="row">
         <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
@@ -169,7 +222,7 @@
   <!-- End Service -->
 
   <!-- Projects -->
-  <section class="projects pt-11 pb-11">
+  <section id="projects" class="projects pt-11 pb-11">
     <div class="container">
       <div class="row">
         <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
@@ -289,7 +342,7 @@
   <!-- End Projects -->
 
   <!-- Clients -->
-  <section class="clients">
+  <section id="clients" class="clients">
     <section>
       <div class="container pt-11 pb-11">
         <h2 class="text-white font-weight-bold text-center">We’re excited about Porto Template</h2>
@@ -316,6 +369,21 @@
           </span>
           <span class="item">
             <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-7.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-1.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-2.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-3.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-4.png" alt="">
+          </span>
+          <span class="item">
+            <img src="https://portotheme.com/html/porto/7.5.0/img/logos/logo-light-5.png" alt="">
           </span>
 
 
@@ -357,7 +425,7 @@
   <!-- End Clients -->
 
   <!-- Members -->
-  <section class="members pt-10 pb-10">
+  <section id="members" class="members pt-10 pb-10">
     <div class="container">
       <div class="row">
         <div class="title text-center col-sm-12 col-xl-12 col-md-12 mb-5">
@@ -471,7 +539,7 @@
   <!-- End Members -->
 
   <!-- Contact -->
-  <section class="contact">
+  <section id="contact" class="contact">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -480,12 +548,80 @@
         <div class="light-bg col-sm-12 col-md-12 col-lg-6 col-xl-6 p-9">
           <h2 class="font-weight-bold pt-2">Contact us</h2>
           <p class="mb-4 text-3 text-grey">LOREM IPSUM DOLOR SIT A MET</p>
+          <form class="grey-text c-form-group">
+            <input type="text" name="" id="" placeholder="Name">
+            <input type="text" name="" id="" placeholder="Email">
+            <input type="text" name="" id="" placeholder="Subject">
+            <textarea name="" id="" rows="5" placeholder="Message"></textarea>
+            <button class="btn text-2 font-weight-bold btn-primary c-btn text-uppercase">Submit</button>
+          </form>
+
 
         </div>
       </div>
     </div>
   </section>
   <!-- End Contact -->
+
+  <section class="contact-info">
+    <div class="container">
+      <div class="row pt-8 pb-8 ">
+        <div
+          class="col-sm-12 col-md-12 col-lg-4 col-xl-4 contact-elm text-lg-left text-xl-left text-md-center text-sm-center justify-content-md-center justify-content-sm-center">
+          <div class="contact-icon mr-3">
+            <i class="fa fa-map-marker fa-2x text-white pt-1"></i>
+          </div>
+          <div class="contact-content">
+            <div class="text-2 c-text-light text-white">ADDRESS</div>
+            <p class="text-2 font-weight-bold text-white">MON - PRI: 10:00am - 6:00pm</p>
+          </div>
+        </div>
+        <div
+          class="col-sm-12 col-md-12 col-lg-4 col-xl-4 contact-elm text-lg-left text-xl-left text-md-center text-sm-center justify-content-md-center justify-content-sm-center ">
+          <div class="contact-icon mr-3">
+            <i class="fa fa-phone fa-2x text-white pt-1"></i>
+          </div>
+          <div class="contact-content">
+            <div class="text-2 c-text-light text-white">CALL US NOW</div>
+            <p class="text-2 font-weight-bold text-white">800-123-4567</p>
+          </div>
+        </div>
+        <div
+          class="col-sm-12 col-md-12 col-lg-4 col-xl-4 contact-elm text-lg-left text-xl-left text-md-center text-sm-center justify-content-md-center justify-content-sm-center ">
+          <div class="contact-icon mr-3">
+            <i class="fa fa-share-alt fa-2x text-white pt-1"></i>
+          </div>
+          <div class="contact-content">
+            <div class="text-2 c-text-light text-white">ADDRESS</div>
+            <p class="text-2 font-weight-bold text-white">
+              <span class="mr-3 text-2">
+                <a class="text-white" href="http://">
+                  <i class="fa fa-facebook text-white"></i>
+                  FACEBOOK
+                </a>
+              </span>
+              <span class="mr-3 text-2">
+                <a class="text-white" href="http://">
+                  <i class="fa fa-twitter text-white"></i>
+                  TWITTER
+                </a>
+              </span>
+              <span class="mr-3 text-2">
+                <a class="text-white" href="http://">
+                  <i class="fa fa-instagram text-white"></i>
+                  INSTAGRAM
+                </a>
+              </span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="black-bg c-footer">
+    <p class="text-grey text-1 pt-3"><strong>PORTO TEMPLATE</strong> - © Copyright 2019. All Rights Reserved.</p>
+  </footer>
 
   <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
