--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto mobile-navbar">
-          <li class="nav-item text-sm-center ">
+          <li class="nav-item text-sm-center text-center">
             <a class="nav-link text-uppercase c-link text-white font-weight-bold c-active" href="#home">Home</a>
           </li>
-          <li class="nav-item text-sm-center ">
+          <li class="nav-item text-sm-center text-center">
             <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#services">services</a>
           </li>
-          <li class="nav-item text-sm-center ">
+          <li class="nav-item text-sm-center text-center">
             <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#projects">Project</a>
           </li>
-          <li class="nav-item text-sm-center ">
+          <li class="nav-item text-sm-center text-center">
             <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#clients">Clients</a>
           </li>
-          <li class="nav-item text-sm-center ">
+          <li class="nav-item text-sm-center text-center ">
             <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#members">Meet the team</a>
           </li>
-          <li class="nav-item text-sm-center ">
+          <li class="nav-item text-sm-center text-center">
             <a class="nav-link text-uppercase c-link text-white font-weight-bold" href="#contact">Contact us</a>
           </li>
         </ul>
